# SafeFamily

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  README.md  app.py  auth.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
config/: logging.py  settings.py
deploy/: README.md
deploy/gunicorn/: gunicorn_conf.py
deploy/nginx/: nginx.docker.conf  safefamily.conf
deploy/systemd/: gunicorn.service
docs/: api.md  architecture.md  coverage-plan.md  delployment.md  implementation.md  notesync-implementation.md  review-questions.md  ruff_fix_plan.md  scheduler_puller_architecture.md  todo-week-heatmap-design.md
scripts/: analyze_urls.py  deploy.sh  desk_notify_mac.lua  desk_notify_win.ahk  incr_log.sh  log_poster.py  log_poster.service  log_poster.sh  migrate.py  notesync_schema.sql  seed_data.py  test.out
skills/pytest-coverage/: SKILL.md
src/safe_family/: __init__.py  app.py
src/safe_family/api/: __init__.py  dependencies.py  routes.py
src/safe_family/auto_git/: __init__.py  auto_git.py
src/safe_family/cli/: __init__.py  analyze.py  gentags.py  weekly_diff.py  weekly_metrics.py
src/safe_family/core/: __init__.py  auth.py  models.py  schemas.py
src/safe_family/notesync/: __init__.py  schemas.py  service.py
src/safe_family/notifications/: __init__.py  gas_weather.py  notifier.py
src/safe_family/rules/: __init__.py  scheduler.py
src/safe_family/static/css/: input.css  styles.css
src/safe_family/static/js/: analyze_route.js  goals.js  image_rotate.js  matrix_rain.js  tab_title.js  todo.js
src/safe_family/templates/: README.md  base.html
src/safe_family/templates/auth/: login.html  oauth_start.html
src/safe_family/templates/miscellaneous/: calc_guide.html  countdown.html  ninja_nightmare.html  store_calculator.html  store_sum.html  yaw_calculator.html
src/safe_family/templates/notes/: notes.html  timeline.html
src/safe_family/templates/rules/: analyze_route.html  schedule_rules.html  suspicious_view.html
src/safe_family/templates/todo/: goals.html  todo.html
src/safe_family/todo/: __init__.py  goals.py  todo.py
src/safe_family/urls/: __init__.py  analyzer.py  blocker.py  miscellaneous.py  notes.py  receiver.py  suspicious.py
src/safe_family/users/: __init__.py  manager.py  users.py
src/safe_family/utils/: __init__.py  constants.py  helpers.py
tests/: conftest.py  test_agile_calc.py  test_analyzer.py  test_api_notes.py  test_auth.py  test_auth_exchange.py  test_auth_notesync_helpers.py  test_auth_oauth.py  test_auth_routes.py  test_auto_git.py  test_blocker.py  test_cli_analyze.py  test_cli_reports.py  test_gas_weather.py  test_goals_route.py  test_helpers.py  test_misc_routes.py  test_models.py  test_notesync_auth.py  test_notesync_lww.py  test_notesync_media_tags.py  test_notifier.py  test_receiver.py  test_routes.py  test_scheduler.py  test_scheduler_locks.py  test_suspicious.py  test_todo.py  test_todo_routes.py  test_units.py  test_users.py
