[tool.ruff]
lint.extend-select = ["ALL"]
lint.ignore = [
    "T201",
    "E501",
    "S104",
    "S105",
    "S201",
    "DTZ002",
    "D203",
    "D213",
    "ANN201",
    "BLE001",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/safe_family/templates/miscellaneous/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --cov --cov-report=term-missing"


[project]
name = "SafeFamily"
version = "2025.1.0"
requires-python = ">=3.11"
description = "A parental control application to help families manage and monitor internet usage."
authors = [{ name = "zzuse", email = "zzuseme@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.scripts]
analyze-urls = "safe_family.cli.analyze:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
