[tool.ruff]
lint.extend-select = ["ALL"]
lint.per-file-ignores = { "tests/*" = [
    "S101",    # asserts
    "S106",    # fake tokens/passwords in fixtures
    "ANN",     # no annotations required in tests
    "ARG",     # stub lambdas/functions with unused args
    "D",       # no docstring requirements in tests
    "PLR2004", # magic values in asserts are fine
    "SLF001",  # tests may poke module privates
    "DTZ",     # naive datetimes in fixtures are fine
    "PLC0415", # local imports inside tests
    "EM",      # string literals in stub exceptions are fine
    "TRY002",  # raising plain Exception in stubs is fine
    "TRY003",  # long messages in stub exceptions are fine
    "FBT",     # boolean positional args in fake helpers are fine
], "scripts/*" = [
    "INP001", # scripts/ is not a package
    "S108",   # writes to /tmp are intentional here
] }
lint.ignore = [
    "T201",
    "E501",
    "S104",
    "S105",
    "S201",
    "DTZ002",
    "DTZ007", # strptime on clock strings ("16:00") that are combined with tz-aware now

    "D203",
    "D213",
    "ANN201",
    "BLE001",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/safe_family/templates/miscellaneous/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --cov --cov-report=term-missing"


[project]
name = "SafeFamily"
version = "2025.1.0"
requires-python = ">=3.11"
description = "A parental control application to help families manage and monitor internet usage."
authors = [{ name = "zzuse", email = "zzuseme@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.scripts]
analyze-urls = "safe_family.cli.analyze:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
