[tool.ruff]
# Explicit linter list (was `ALL`, frozen 2026-07-12 at ruff 0.15.20 with a
# clean `ruff check .`). New linters added by future ruff versions won't
# auto-enable; add them here deliberately. Framework linters that don't apply
# (AIR airflow, DJ django, FAST fastapi) and preview-only ones (CPY, DOC)
# are intentionally left out.
lint.select = [
    "A",     # builtins shadowing
    "ANN",   # annotations
    "ARG",   # unused arguments
    "ASYNC", # async pitfalls
    "B",     # bugbear
    "BLE",   # blind except (BLE001 ignored below)
    "C4",    # comprehensions
    "C90",   # mccabe complexity
    "COM",   # commas
    "D",     # docstrings
    "DTZ",   # naive datetimes
    "E",     # pycodestyle errors
    "EM",    # exception messages
    "ERA",   # commented-out code
    "EXE",   # shebangs
    "F",     # pyflakes
    "FA",    # future annotations
    "FBT",   # boolean traps
    "FIX",   # FIXME/TODO markers
    "FLY",   # f-string joins
    "FURB",  # refurb
    "G",     # logging format
    "I",     # import sorting
    "ICN",   # import conventions
    "INP",   # implicit namespace packages
    "INT",   # gettext
    "ISC",   # implicit string concat
    "LOG",   # logging pitfalls
    "N",     # naming
    "NPY",   # numpy
    "PD",    # pandas
    "PERF",  # performance
    "PGH",   # pygrep hooks
    "PIE",   # misc lints
    "PL",    # pylint
    "PT",    # pytest style
    "PTH",   # pathlib
    "PYI",   # stub files
    "Q",     # quotes
    "RET",   # return statements
    "RSE",   # raise statements
    "RUF",   # ruff-specific
    "S",     # security (bandit)
    "SIM",   # simplify
    "SLF",   # private member access
    "SLOT",  # __slots__
    "T10",   # debugger calls
    "T20",   # print statements (T201 ignored below)
    "TC",    # type-checking blocks
    "TD",    # TODO format
    "TID",   # tidy imports
    "TRY",   # exception handling style
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
    "YTT",   # sys.version misuse
]
lint.per-file-ignores = { "tests/*" = [
    "S101",    # asserts
    "S106",    # fake tokens/passwords in fixtures
    "ANN",     # no annotations required in tests
    "ARG",     # stub lambdas/functions with unused args
    "D",       # no docstring requirements in tests
    "PLR2004", # magic values in asserts are fine
    "SLF001",  # tests may poke module privates
    "DTZ",     # naive datetimes in fixtures are fine
    "PLC0415", # local imports inside tests
    "EM",      # string literals in stub exceptions are fine
    "TRY002",  # raising plain Exception in stubs is fine
    "TRY003",  # long messages in stub exceptions are fine
    "FBT",     # boolean positional args in fake helpers are fine
], "scripts/*" = [
    "INP001", # scripts/ is not a package
    "S108",   # writes to /tmp are intentional here
], "src/safe_family/notesync/schemas.py" = [
    "N815", # camelCase fields mirror the mobile app's JSON wire format
], "deploy/*" = [
    "INP001", # deploy configs are loaded by tools, not imported as packages
] }
lint.ignore = [
    "T201",
    "E501",
    "S104",
    "S105",
    "S201",
    "DTZ002",
    "DTZ007", # strptime on clock strings ("16:00") that are combined with tz-aware now

    "D203",
    "D213",
    "ANN201",
    "BLE001",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/safe_family/templates/miscellaneous/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --cov --cov-report=term-missing"


[project]
name = "SafeFamily"
version = "2025.1.0"
requires-python = ">=3.11"
description = "A parental control application to help families manage and monitor internet usage."
authors = [{ name = "zzuse", email = "zzuseme@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.scripts]
analyze-urls = "safe_family.cli.analyze:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
